[package]
name = "cashier"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "Generalized Data KV Cache Module" 
keywords = ["cache"] 
readme = "README.md"
repository = "https://github.com/myyrakle/cashier" 
documentation = "https://docs.rs/cashier/latest/cashier" 
homepage = "https://github.com/myyrakle/cashier/blob/master/README.md" 

[dependencies]
anyhow = "1.0.79"
epoch-timestamp = "1.0.0"
redis = "0.24.0"