[package]
name = "cashier"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "Generalized Data KV Cache Module" 
keywords = ["cache"] 
readme = "README.md"
repository = "https://github.com/myyrakle/cashier" 
documentation = "https://docs.rs/cashier/latest/cashier" 
homepage = "https://github.com/myyrakle/cashier/blob/master/README.md" 

[dependencies]
anyhow = "1.0.79"
epoch-timestamp = "1.0.0"
tokio = { version="1.36.0", features=["full"] }
futures = { version="0.3.30", features=["executor"] }

[target.'cfg(dynamo)'.dependencies]
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.13.1"

[target.'cfg(redis)'.dependencies]
redis = "0.24.0"

[target.'cfg(postgres)'.dependencies]
postgres = "0.19.7"

[features]
default = []

full = ["dynamo", "redis"]
dynamo = []
redis = []