[package]
name = "cashier"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "Generalized Data KV Cache Module" 
keywords = ["cache"] 
readme = "README.md"
repository = "https://github.com/myyrakle/cashier" 
documentation = "https://docs.rs/cashier/latest/cashier" 
homepage = "https://github.com/myyrakle/cashier/blob/master/README.md" 

[dependencies]
anyhow = "1.0.79"
epoch-timestamp = "1.0.0"
tokio = { version="1.36.0", features=["full"] }
futures = { version="0.3.30", features=["executor"] }

aws-config = { version = "1.1.4", features = ["behavior-version-latest"], optional = true }
aws-sdk-dynamodb = { version = "1.13.1", optional = true }
redis = { version = "0.24.0", optional = true }
postgres = { version = "0.19.7", optional = true } 

[features]
default = []

full = ["dynamo", "redis"]
dynamo = ["dep:aws-config", "dep:aws-sdk-dynamodb"]
redis = ["dep:redis"]